<resources>
    <string name="app_name">PracticeIV</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="log_in">Log In</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_an_account">Create an Account</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="enter_a_new_password">Enter a New Password</string>
    <string name="enter_a_username">Enter a Username</string>
    <string name="subtitle">SWENG888</string>
    <string name="title">Practice IV Application</string>
    <string name="add_item">Add Movie</string>
    <string name="list_of_items">List of Movies</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="list_of_movies">List of Movies</string>
    <string name="add_movie">Add Movie</string>
    <string name="clear">Clear</string>
    <string name="confirm">Confirm</string>
    <string name="studio">Studio</string>
    <string name="year">Year</string>
    <string name="director">Director</string>
    <string name="movie_title">Title</string>
    <string name="enter_the_studio">Enter the Studio</string>
    <string name="enter_the_title">Enter the Title</string>
    <string name="enter_the_director">Enter the Director</string>
    <string name="enter_the_year">Enter the Year</string>
    <string name="user_information">User Information</string>
    <string name="user_information_fragment_text">User Information</string>
    <string name="log_out">Log out</string>
    <string name="practice_iv_application">Practice IV Application</string>
    <string name="delete_selected_items">Delete</string>
</resources>