<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_description"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_movie_list"
            android:icon="@drawable/baseline_movie_24"
            android:title="@string/list_of_items" />
        <item
            android:id="@+id/nav_add_movie"
            android:icon="@drawable/ic_assignment"
            android:title="@string/add_item" />
        <item
            android:id="@+id/nav_user_info"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/user_information" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/baseline_arrow_back_ios_new_24"
            android:title="@string/log_out" />
    </group>

</menu>