<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="fill_horizontal"
    android:layout_marginTop="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_movie"
        android:layout_marginBottom="10dp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/home_movie_title"
        android:text="@string/movie_title"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/home_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textStyle="bold"
        android:hint="@string/enter_the_title"/>

    <TextView
        android:id="@+id/home_movie_director"
        android:text="@string/director"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/home_edit_director"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textStyle="bold"
        android:hint="@string/enter_the_director"/>

    <TextView
        android:id="@+id/home_movie_year"
        android:text="@string/year"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/home_edit_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textStyle="bold"
        android:hint="@string/enter_the_year" />

    <TextView
        android:id="@+id/home_movie_studio"
        android:text="@string/studio"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/home_edit_studio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textStyle="bold"
        android:hint="@string/enter_the_studio" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/button_confirm"
            android:text="@string/confirm"
            android:layout_marginEnd="10dp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_clear"
            android:text="@string/clear"
            android:layout_marginEnd="10dp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</LinearLayout>